fixed: radiobutton and checkbox styles on iOS browsers, #497

--- a/src/sass/formhub/_radiocheck.scss
+++ b/src/sass/formhub/_radiocheck.scss
@@ -15,6 +15,8 @@
     margin-top: 0;
     border-width: 3px;
     border-style: solid;
+    border-radius: 0;
+    background-color: transparent;
 }
 
 .option-wrapper {
